test/fail/basic_syntax/check_line_numbers.lily
#[
SyntaxError: Cannot assign type 'String' to type 'Integer'.
    from check_line_numbers.lily:7:
]#

var a = 10
a = "10"
